--- a/project/VS2010Express/XBMC.vcxproj
+++ b/project/VS2010Express/XBMC.vcxproj
@@ -291,6 +291,7 @@
     <ClCompile Include="..\..\xbmc\lib\libjsonrpc\AudioLibrary.cpp" />
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonAddon.cpp" />
     <ClCompile Include="..\..\xbmc\lib\libPython\xbmcmodule\xbmcaddonmodule.cpp" />
+    <ClCompile Include="..\..\xbmc\RenderSystemGLES.cpp" />
     <ClCompile Include="..\..\xbmc\win32\NetworkWin32.cpp" />
     <ClCompile Include="..\..\xbmc\win32\pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug (DirectX)|Win32'">Create</PrecompiledHeader>
@@ -971,9 +972,6 @@
     <ClCompile Include="..\..\xbmc\cdrip\EncoderLame.cpp" />
     <ClCompile Include="..\..\xbmc\cdrip\EncoderVorbis.cpp" />
     <ClCompile Include="..\..\xbmc\cdrip\EncoderWav.cpp" />
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\AMFObject.cpp" />
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\rtmp.cpp" />
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\rtmppacket.cpp" />
     <ClCompile Include="..\..\xbmc\lib\libjsonrpc\AVPlayerOperations.cpp" />
     <ClCompile Include="..\..\xbmc\lib\libjsonrpc\AVPlaylistOperations.cpp" />
     <ClCompile Include="..\..\xbmc\lib\libjsonrpc\FileItemHandler.cpp" />
@@ -1002,6 +1000,7 @@
     <ClInclude Include="..\..\xbmc\GUIViewStateAddonBrowser.h" />
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\AudioLibrary.h" />
     <ClInclude Include="..\..\xbmc\lib\libPython\xbmcmodule\PythonAddon.h" />
+    <ClInclude Include="..\..\xbmc\RenderSystemGLES.h" />
     <ClInclude Include="..\..\xbmc\SystemGlobals.h" />
     <ClInclude Include="..\..\xbmc\win32\NetworkWin32.h" />
     <ClInclude Include="..\..\xbmc\win32\pch.h" />
@@ -1755,9 +1754,6 @@
     <ClInclude Include="..\..\xbmc\cdrip\EncoderLame.h" />
     <ClInclude Include="..\..\xbmc\cdrip\EncoderVorbis.h" />
     <ClInclude Include="..\..\xbmc\cdrip\EncoderWav.h" />
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\AMFObject.h" />
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\rtmp.h" />
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\rtmppacket.h" />
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\AVPlayerOperations.h" />
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\AVPlaylistOperations.h" />
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\FileItemHandler.h" />
