--- a/project/VS2010Express/XBMC.vcxproj.filters
+++ b/project/VS2010Express/XBMC.vcxproj.filters
@@ -175,9 +175,6 @@
     <Filter Include="libraries\cdrip">
       <UniqueIdentifier>{595eeac0-ead4-4c21-a22b-deffe179ba17}</UniqueIdentifier>
     </Filter>
-    <Filter Include="libraries\libRTMP">
-      <UniqueIdentifier>{f89ac5ca-72c0-4f4d-8654-ebfa9f0d0697}</UniqueIdentifier>
-    </Filter>
     <Filter Include="libraries\libjsonrpc">
       <UniqueIdentifier>{96910e2c-8b38-4c14-8baa-7c7280bd45cd}</UniqueIdentifier>
     </Filter>
@@ -2031,15 +2028,6 @@
     <ClCompile Include="..\..\xbmc\cdrip\EncoderWav.cpp">
       <Filter>libraries\cdrip</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\AMFObject.cpp">
-      <Filter>libraries\libRTMP</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\rtmp.cpp">
-      <Filter>libraries\libRTMP</Filter>
-    </ClCompile>
-    <ClCompile Include="..\..\xbmc\lib\libRTMP\rtmppacket.cpp">
-      <Filter>libraries\libRTMP</Filter>
-    </ClCompile>
     <ClCompile Include="..\..\xbmc\lib\libjsonrpc\AVPlayerOperations.cpp">
       <Filter>libraries\libjsonrpc</Filter>
     </ClCompile>
@@ -2126,6 +2114,9 @@
     </ClCompile>
     <ClCompile Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.cpp">
       <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\xbmc\RenderSystemGLES.cpp">
+      <Filter>Source Files\Windowing\Render System</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -4379,15 +4370,6 @@
     <ClInclude Include="..\..\xbmc\cdrip\EncoderWav.h">
       <Filter>libraries\cdrip</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\AMFObject.h">
-      <Filter>libraries\libRTMP</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\rtmp.h">
-      <Filter>libraries\libRTMP</Filter>
-    </ClInclude>
-    <ClInclude Include="..\..\xbmc\lib\libRTMP\rtmppacket.h">
-      <Filter>libraries\libRTMP</Filter>
-    </ClInclude>
     <ClInclude Include="..\..\xbmc\lib\libjsonrpc\AVPlayerOperations.h">
       <Filter>libraries\libjsonrpc</Filter>
     </ClInclude>
@@ -4471,6 +4453,9 @@
     </ClInclude>
     <ClInclude Include="..\..\xbmc\cores\dvdplayer\DVDCodecs\Video\CrystalHD.h">
       <Filter>cores\dvdplayer\DVDCodecs\Video</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\xbmc\RenderSystemGLES.h">
+      <Filter>Source Files\Windowing\Render System</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
